--- a/scss/sections/menus/_lg-menu-tabs.scss
+++ b/scss/sections/menus/_lg-menu-tabs.scss
@@ -1,10 +1,5 @@
 @use '../../partials/mixins' as *;
 
-.large-menu {
-    display: none;
-}
-
-/* menu tab */
 .large-menu__tabs {
     display: flex;
     flex-direction: row;
@@ -13,15 +8,13 @@
 
 .large-menu__tab {
     flex: 1 0 33.33%;
-    text-align: center;
     padding: 1rem;
-    font-size: clamp(1.35rem, 1.2rem + 1vw, 2rem);
     transition: 0.5s;
     position: relative;
-}
 
-.large-menu__tab--active {
-    transition: 0.5s;
+    &--active {
+        transition: 0.5s;
+    }
 }
 
 .large-menu__tab-link::after {
@@ -32,4 +25,3 @@
     left: 0;
     content: "";
 }
-
