--- a/scss/sections/menus/_sm-menu-carousel.scss
+++ b/scss/sections/menus/_sm-menu-carousel.scss
@@ -19,14 +19,13 @@
 
 .small-menu__slide img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-inline: auto;
     width: 90%;
     height: auto;
     border-radius: 5px;
 }
 
-/* Caption text */
+// carousel text
 .small-menu__image-description {
     position: absolute;
     left: 5%;
@@ -35,8 +34,6 @@
     padding: 8px 12px;
     width: 90%;
     max-width: 350px;
-    font-size: 1.3rem;
-    text-align: center;
     border-radius: 0 0 5px 5px;
 }
 
@@ -48,7 +45,7 @@
     top: 50%;
     width: auto;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 1rem;
     transition: 0.6s ease;
     border-radius: 50%;
     user-select: none;
@@ -68,15 +65,11 @@
 @include custom-min-mq (400) {
     .small-menu__slideshow-button--prev,
     .small-menu__slideshow-button--next {
-        cursor: pointer;
-        position: absolute;
         top: 45%;
-        width: auto;
-        font-weight: bold;
-        font-size: 20px;
+        font-size: 1.25rem;
         transition: 0.6s ease;
         border-radius: 50%;
-        padding: 16px;
+        padding: 1rem;
     }
 
     .small-menu__slideshow-button--prev {
@@ -96,8 +89,8 @@
 .small-menu__slideshow-dot {
     cursor: pointer;
     height: 0.625rem;
-    width: 10px;
-    margin: 0 2px;
+    width: 0.625rem;
+    margin: 0 3px;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
