--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -90,6 +90,7 @@ hr {
 .small-menu__image-description {
     background-color: $orange-3;
     color: $white-3;
+    border-top: 1px solid $orange-3;
 }
 
 //Next & previous buttons
