--- a/scss/layouts/_sections.scss
+++ b/scss/layouts/_sections.scss
@@ -1,5 +1,5 @@
+@use '../partials/functions' as f;
 @use '../partials/mixins' as *;
-@use '../partials/colors' as *;
 
 section:not(:first-of-type) {
     max-width: 100%;
@@ -9,16 +9,19 @@ section:not(:first-of-type) {
 
     @include min-mq (sm) {
         max-width: 800px;
+        max-width: f.rem(800);
         padding-inline: 2rem;
     }
 
     @include min-mq (lg) {
         max-width: 1150px;
+        max-width: f.rem(1150);
         padding-inline: 2.5rem;
     }
 
     @include min-mq (xl) {
         max-width: 1500px;
+        max-width: f.rem(1500);
         padding-inline: 2rem;
     }
 }
@@ -28,6 +31,7 @@ section#menu {
 
     @include min-mq (xl) {
         max-width: 1300px;
+        max-width: f.rem(1300);
         padding-inline: 2rem;
     }
 }
