--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -1,3 +1,4 @@
+@use '../partials/functions' as f;
 @use '../partials/mixins' as *;
 
 .findus {
@@ -68,11 +69,12 @@
 
 .findus__contact-content,
 .findus__openhour-content {
-    max-width: 270px;
+    max-width: f.rem(270);
+
     width: 100%;
 
     @include min-mq (sm) {
-        max-width: 320px;
+        max-width: f.rem(320);
         width: 95%;
     }
 }
