--- a/scss/sections/menus/_sm-menu-carousel.scss
+++ b/scss/sections/menus/_sm-menu-carousel.scss
@@ -1,15 +1,12 @@
-@use '../../partials/fonts' as *;
 @use '../../partials/functions' as f;
 @use '../../partials/mixins' as *;
 
 /* Slideshow container */
 .small-menu__slideshow-container {
-    max-width: 950px;
     position: relative;
     margin: auto;
     margin-top: 25px;
-    margin-bottom: 40px;
-    max-width: 350px;
+    max-width: f.rem(350);
 }
 
 /* Hide the images by default */
@@ -20,20 +17,17 @@
 .small-menu__slide img {
     display: block;
     margin-inline: auto;
-    width: 90%;
+    width: 85%;
     height: auto;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
 }
 
 // carousel text
 .small-menu__image-description {
-    position: absolute;
-    left: 5%;
-    bottom: -2rem;
-    margin: auto;
+    margin-inline: auto;
     padding: 8px 12px;
-    width: 90%;
-    max-width: 350px;
+    width: 85%;
+    max-width: f.rem(350);
     border-radius: 0 0 5px 5px;
 }
 
@@ -42,23 +36,22 @@
 .small-menu__slideshow-button--next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 45%;
     width: auto;
     font-weight: bold;
     font-size: 1rem;
     transition: 0.6s ease;
     border-radius: 50%;
     user-select: none;
-    padding-block: 6px;
 }
 
 .small-menu__slideshow-button--prev {
-    left: -8px;
+    left: -4px;
     padding-right: 0px;
 }
 
 .small-menu__slideshow-button--next {
-    right: -8px;
+    right: -4px;
     padding-left: 0px;
 }
 
@@ -84,6 +77,7 @@
 /* The dots indicators */
 .small-menu__slideshow-dots {
     text-align: center;
+    margin-top: 0.75rem;
 }
 
 .small-menu__slideshow-dot {
