--- a/scss/sections/reservation-form/_form-structure.scss
+++ b/scss/sections/reservation-form/_form-structure.scss
@@ -1,6 +1,5 @@
 // layout of reservation form
-
-@use '../../partials/colors' as *;
+@use '../../partials/functions' as f;
 @use '../../partials/mixins' as *;
 
 .reservation {
@@ -15,43 +14,49 @@
     }
 }
 
-.reservation__photo {
-    display: none;
-
-    @include custom-min-mq (379.5) {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 2rem;
-    }
-}
-
 .reservation__form {
     display: grid;
     grid-template-rows: repeat(6, 1fr) repeat(2, auto);
     grid-row-gap: 0.625rem;
-    max-width: 400px;
+    max-width: f.rem(400);
     margin-inline: auto;
+
+    @include min-mq (sm) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr) repeat(2, auto);
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        max-width: f.rem(800);
+    }
+
+    @include min-mq (lg) {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr) repeat(2, auto);
+        max-width: f.rem(1000);
+    }
+
+    @include min-mq (xl) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr) repeat(2, auto);
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+    }
 }
 
-.reservation__form > div{
-    max-width: 400px;
+.reservation__form>div {
+    max-width: f.rem(400);
 
     @include custom-min-mq (576) {
         max-width: 100%;
     }
 }
 
-@include min-mq (sm) {
-    .reservation__form {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-        grid-column-gap: 20px;
-        grid-row-gap: 20px;
-        max-width: 800px;
-        margin-inline: auto;
-    }
+.reservation__form--bottom-part p{
+    margin-bottom: 1rem;
+}
 
+// grid of input and textarea
+@include min-mq (sm) {
     .reservation__form--name {
         grid-area: 1 / 1 / 2 / 2;
     }
@@ -83,23 +88,10 @@
     .reservation__form--bottom-part {
         grid-area: 5 / 1 / 6 / 3;
     }
-
-    .textarea-control {
-        height: 6rem;
-    }
 }
 
 
 @include min-mq (lg) {
-    .reservation__form {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr) repeat(2, auto);
-        grid-column-gap: 20px;
-        grid-row-gap: 20px;
-        max-width: 1000px;
-        margin-inline: auto;
-    }
-
     .reservation__form--name {
         grid-area: 1 / 1 / 2 / 2;
     }
@@ -131,20 +123,9 @@
     .reservation__form--bottom-part {
         grid-area: 5 / 1 / 6 / 4;
     }
-
-    .textarea-control {
-        height: 7.5rem;
-    }
 }
 
 @include min-mq (xl) {
-    .reservation__form {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-        grid-column-gap: 10px;
-        grid-row-gap: 10px;
-    }
-
     .reservation__form--name {
         grid-area: 1 / 1 / 2 / 2;
     }
