--- a/scss/sections/menus/_index.scss
+++ b/scss/sections/menus/_index.scss
@@ -2,7 +2,7 @@
 @use './lg-menu-contents' as *;
 @use './sm-menu-accordions' as *;
 @use './sm-menu-carousel' as *;
-@use './structure' as *;
+@use './menu-structure' as *;
 
 
 
@@ -11,4 +11,4 @@
 @forward '../menus/lg-menu-contents';
 @forward '../menus/sm-menu-accordions';
 @forward '../menus/sm-menu-carousel';
-@forward '../menus/structure';
+@forward '../menus/menu-structure';
