--- a/scss/layouts/_sections.scss
+++ b/scss/layouts/_sections.scss
@@ -1,11 +1,11 @@
 @use '../partials/functions' as f;
 @use '../partials/mixins' as *;
 
-section:not(:first-of-type) {
+section#findus {
     max-width: 100%;
     padding-inline: 1rem;
     margin-inline: auto;
-    padding-block: calc(1rem + 1.5vw);
+    padding-block: 1rem;
 
     @include min-mq (sm) {
         max-width: 800px;
@@ -17,21 +17,40 @@ section:not(:first-of-type) {
         max-width: 1150px;
         max-width: f.rem(1150);
         padding-inline: 2.5rem;
+        padding-block: 5rem;
     }
 
     @include min-mq (xl) {
         max-width: 1500px;
         max-width: f.rem(1500);
         padding-inline: 2rem;
+        padding-block: 2.5rem 3rem;
     }
 }
 
-section#menu {
+section:not(:first-of-type) {
     max-width: 100%;
+    padding-inline: 1rem;
+    margin-inline: auto;
+    padding-block: 2.5rem;
+
+    @include min-mq (sm) {
+        max-width: 800px;
+        max-width: f.rem(800);
+        padding-inline: 2rem;
+    }
+
+    @include min-mq (lg) {
+        max-width: 1150px;
+        max-width: f.rem(1150);
+        padding-inline: 2.5rem;
+        padding-block: 5rem;
+    }
 
     @include min-mq (xl) {
-        max-width: 1300px;
-        max-width: f.rem(1300);
+        max-width: 1500px;
+        max-width: f.rem(1500);
         padding-inline: 2rem;
+        padding-block: 6rem 8.5rem;
     }
 }
