--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -37,16 +37,19 @@ body {
 #menu h1,
 #reservation h1 {
     font-size: clamp(2.2rem, 2rem + 1vw, 3rem);
-    text-align: center;
     text-shadow: 2px 3px $pink-1;
-    margin-block: calc(1.25rem + 1.5vw);
+    margin-bottom: 1.25rem;
+    text-align: center;
+
+    @include min-mq (xl) {
+        margin-bottom: 3rem;
+    }
 }
 
 // small menu
 //buttons when the accordion panel is close
 .small-menu__accordion {
     font-size: 1.4rem;
-    text-align: left;
 
     //"plus" sign (+) 
     &:after {
@@ -58,19 +61,12 @@ body {
 // carousel text
 .small-menu__image-description {
     font-size: 1.3rem;
-    text-align: center;
 }
 
 // large menu
 // menu tab
 .large-menu__tab {
     font-size: clamp(1.35rem, 1.2rem + 1vw, 2rem);
-    text-align: center;
-}
-
-// menu content
-.large-food-menu {
-    line-height: 1.5;
 }
 
 // menu description
@@ -87,7 +83,6 @@ body {
     font-size: clamp(1.2rem, 1rem + 1vw, 1.4rem);
     font-weight: 700;
     line-height: 0.75rem;
-    text-align: center;
 }
 
 .large-menu__image-description {
@@ -96,50 +91,22 @@ body {
 }
 
 // reservation form
-.textarea-control {
+.input-control, .textarea-control {
     font-size: 1.3rem;
     font-weight: 400;
     line-height: 1.5;
     font-family: inherit;
 }
 
+.reservation__form--button {
+    font-size: 1.25rem;
+    font-family: inherit;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// findus
 .findus h3 {
     font-size: clamp(1.5rem, 1rem + 1.5vw, 2rem);
-    text-align: left;
-    padding-block: 0.5rem;
     font-weight: 400;
-    border-bottom: 4px dotted $grey-2;
-    margin: 0.5rem auto;
-
-    @include custom-min-mq (299.5) {
-        text-align: center;
-        margin-block: 0 0.7rem;
-    }
 }
 
 
