--- a/scss/sections/menus/_lg-menu-tabs.scss
+++ b/scss/sections/menus/_lg-menu-tabs.scss
@@ -11,6 +11,7 @@
     padding: 1rem;
     transition: 0.5s;
     position: relative;
+    text-align: center;
 
     &--active {
         transition: 0.5s;
