--- a/scss/sections/menus/_sm-menu-carousel.scss
+++ b/scss/sections/menus/_sm-menu-carousel.scss
@@ -28,6 +28,7 @@
     padding: 8px 12px;
     width: 85%;
     max-width: f.rem(350);
+    text-align: center;
     border-radius: 0 0 5px 5px;
 }
 
