--- a/scss/sections/reservation-form/_form-inputs.scss
+++ b/scss/sections/reservation-form/_form-inputs.scss
@@ -2,11 +2,7 @@
     display: block;
     width: 100%;
     height: 3rem;
-    padding: .375rem .75rem;
-    font-size: 1.3rem;
-    font-weight: 400;
-    line-height: 1.5;
-    font-family: inherit;
+    padding: 0.375rem 0.75rem;
     background-clip: padding-box;
-    border-radius: .375rem;
+    border-radius: 0.375rem;
 }
