--- a/scss/sections/reservation-form/_form-photo.scss
+++ b/scss/sections/reservation-form/_form-photo.scss
@@ -4,7 +4,7 @@
 .reservation__photo {
     display: none;
 
-    @include custom-min-mq (379.5) {
+    @include custom-min-mq (400) {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -12,7 +12,7 @@
     }
 
     @include custom-min-mq (1249.5) {
-        padding-bottom: 6rem;
+        padding-bottom: 5.5rem;
     }
 }
 
@@ -23,6 +23,7 @@
     height: auto;
     border-radius: 0.375rem;
     padding: 0.25rem;
+    // transform: rotate(-2deg);
 
 @include min-mq(sm) {
         max-width: f.rem(600);
