--- a/scss/style.css
+++ b/scss/style.css
@@ -545,6 +545,10 @@ textarea:focus {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.findus h3 {
+  border-bottom: 4px dotted rgb(206, 212, 218);
+}
+
 .contact__icon {
   color: rgb(119, 119, 119);
 }
@@ -593,14 +597,19 @@ body {
 #menu h1,
 #reservation h1 {
   font-size: clamp(2.2rem, 2rem + 1vw, 3rem);
-  text-align: center;
   text-shadow: 2px 3px rgb(255, 192, 203);
-  margin-block: calc(1.25rem + 1.5vw);
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+@media all and (min-width: 78.125em) {
+  #menu h1,
+  #reservation h1 {
+    margin-bottom: 3rem;
+  }
 }
 
 .small-menu__accordion {
   font-size: 1.4rem;
-  text-align: left;
 }
 .small-menu__accordion:after {
   content: "+";
@@ -609,16 +618,10 @@ body {
 
 .small-menu__image-description {
   font-size: 1.3rem;
-  text-align: center;
 }
 
 .large-menu__tab {
   font-size: clamp(1.35rem, 1.2rem + 1vw, 2rem);
-  text-align: center;
-}
-
-.large-food-menu {
-  line-height: 1.5;
 }
 
 .large-food-menu h3 {
@@ -634,7 +637,6 @@ body {
   font-size: clamp(1.2rem, 1rem + 1vw, 1.4rem);
   font-weight: 700;
   line-height: 0.75rem;
-  text-align: center;
 }
 
 .large-menu__image-description {
@@ -642,26 +644,21 @@ body {
   text-shadow: 1px 1px rgb(255, 239, 213);
 }
 
-.textarea-control {
+.input-control, .textarea-control {
   font-size: 1.3rem;
   font-weight: 400;
   line-height: 1.5;
   font-family: inherit;
 }
 
+.reservation__form--button {
+  font-size: 1.25rem;
+  font-family: inherit;
+}
+
 .findus h3 {
   font-size: clamp(1.5rem, 1rem + 1.5vw, 2rem);
-  text-align: left;
-  padding-block: 0.5rem;
   font-weight: 400;
-  border-bottom: 4px dotted rgb(206, 212, 218);
-  margin: 0.5rem auto;
-}
-@media all and (min-width: 18.71875em) {
-  .findus h3 {
-    text-align: center;
-    margin-block: 0 0.7rem;
-  }
 }
 
 .navbar {
@@ -852,11 +849,41 @@ body {
   }
 }
 
+section#findus {
+  max-width: 100%;
+  padding-inline: 1rem;
+  margin-inline: auto;
+  padding-block: 1rem;
+}
+@media all and (min-width: 36em) {
+  section#findus {
+    max-width: 800px;
+    max-width: 50rem;
+    padding-inline: 2rem;
+  }
+}
+@media all and (min-width: 62em) {
+  section#findus {
+    max-width: 1150px;
+    max-width: 71.875rem;
+    padding-inline: 2.5rem;
+    padding-block: 5rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  section#findus {
+    max-width: 1500px;
+    max-width: 93.75rem;
+    padding-inline: 2rem;
+    padding-block: 2.5rem 3rem;
+  }
+}
+
 section:not(:first-of-type) {
   max-width: 100%;
   padding-inline: 1rem;
   margin-inline: auto;
-  padding-block: calc(1rem + 1.5vw);
+  padding-block: 2.5rem;
 }
 @media all and (min-width: 36em) {
   section:not(:first-of-type) {
@@ -870,6 +897,7 @@ section:not(:first-of-type) {
     max-width: 1150px;
     max-width: 71.875rem;
     padding-inline: 2.5rem;
+    padding-block: 5rem;
   }
 }
 @media all and (min-width: 78.125em) {
@@ -877,17 +905,7 @@ section:not(:first-of-type) {
     max-width: 1500px;
     max-width: 93.75rem;
     padding-inline: 2rem;
-  }
-}
-
-section#menu {
-  max-width: 100%;
-}
-@media all and (min-width: 78.125em) {
-  section#menu {
-    max-width: 1300px;
-    max-width: 81.25rem;
-    padding-inline: 2rem;
+    padding-block: 6rem 8.5rem;
   }
 }
 
@@ -897,11 +915,11 @@ footer {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-block: calc(1.5rem + 1vw);
+  padding-block: calc(1rem + 2.5vw);
 }
 
 .social-icons i {
-  margin: 8px 10px 20px 10px;
+  margin: 0.5rem 0.625rem 1.25rem 0.625rem;
 }
 
 #home {
@@ -957,6 +975,7 @@ footer {
   padding: 1rem;
   transition: 0.5s;
   position: relative;
+  text-align: center;
 }
 .large-menu__tab--active {
   transition: 0.5s;
@@ -1006,6 +1025,7 @@ footer {
   height: 2.5rem;
   padding-block: 1rem;
   margin-left: 0.5rem;
+  text-align: center;
 }
 
 /* menu photos */
@@ -1055,18 +1075,22 @@ footer {
   }
 }
 .small-menu__accordion {
-  cursor: pointer;
   padding: 0.8rem;
   width: 100%;
+  text-align: left;
   border: none;
   outline: none;
   transition: 0.4s;
-  margin-block-start: 0.5rem;
+  cursor: pointer;
 }
 .small-menu__accordion:after {
   content: "+";
   float: right;
   margin-left: 5px;
+}
+
+.small-menu__accordion:not(:first-of-type) {
+  margin-top: 0.5rem;
 }
 
 .small-menu__accordion--active:after {
@@ -1147,6 +1171,7 @@ footer {
   padding: 8px 12px;
   width: 85%;
   max-width: 21.875rem;
+  text-align: center;
   border-radius: 0 0 5px 5px;
 }
 
@@ -1223,7 +1248,6 @@ footer {
 }
 .small-menu__carousel {
   display: block;
-  margin-bottom: 1.5rem;
 }
 @media all and (min-width: 43.71875em) {
   .small-menu__carousel {
@@ -1254,10 +1278,31 @@ footer {
     border-radius: 0 0 15px 15px;
   }
 }
+.large-menu {
+  max-width: 28.125rem;
+  margin-inline: auto;
+}
+@media all and (min-width: 36em) {
+  .large-menu {
+    max-width: 50rem;
+  }
+}
+@media all and (min-width: 62em) {
+  .large-menu {
+    max-width: 62.5rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  .large-menu {
+    max-width: 81.25rem;
+    padding-inline: 2rem;
+  }
+}
+
 .reservation__photo {
   display: none;
 }
-@media all and (min-width: 23.71875em) {
+@media all and (min-width: 25em) {
   .reservation__photo {
     display: flex;
     justify-content: center;
@@ -1267,7 +1312,7 @@ footer {
 }
 @media all and (min-width: 78.09375em) {
   .reservation__photo {
-    padding-bottom: 6rem;
+    padding-bottom: 5.5rem;
   }
 }
 
@@ -1287,8 +1332,6 @@ footer {
 }
 
 .reservation__form--button {
-  font-family: inherit;
-  font-size: 1.25rem;
   padding: 10px 15px;
   border: none;
   border-radius: 10px;
@@ -1301,10 +1344,6 @@ footer {
   width: 100%;
   height: 3rem;
   padding: 0.375rem 0.75rem;
-  font-size: 1.3rem;
-  font-weight: 400;
-  line-height: 1.5;
-  font-family: inherit;
   background-clip: padding-box;
   border-radius: 0.375rem;
 }
@@ -1316,11 +1355,6 @@ footer {
   padding: 0.375rem 0.75rem;
   background-clip: padding-box;
   border-radius: 0.375rem;
-}
-@media all and (min-width: 36em) {
-  .textarea-control {
-    height: 6rem;
-  }
 }
 @media all and (min-width: 62em) {
   .textarea-control {
@@ -1366,8 +1400,8 @@ footer {
   .reservation__form {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
   }
 }
 
@@ -1547,6 +1581,18 @@ footer {
   .findus__openhour-content {
     max-width: 20rem;
     width: 95%;
+  }
+}
+
+.findus h3 {
+  margin-inline: auto;
+  margin-bottom: 0.7rem;
+  padding-bottom: 0.7rem;
+  text-align: left;
+}
+@media all and (min-width: 18.71875em) {
+  .findus h3 {
+    text-align: center;
   }
 }
 
