--- a/scss/sections/reservation-form/_index.scss
+++ b/scss/sections/reservation-form/_index.scss
@@ -1,14 +1,16 @@
 @use './form-photo' as *;
-@use './form-button' as *;
 @use './form-inputs' as *;
 @use './form-textarea' as *;
+@use './form-paragraph' as *;
+@use './form-button' as *;
 @use './form-structure' as *;
 
 
 
 
 @forward '../reservation-form/form-photo';
-@forward '../reservation-form/form-button';
 @forward '../reservation-form/form-inputs';
 @forward '../reservation-form/form-textarea';
+@forward '../reservation-form/form-paragraph';
+@forward '../reservation-form/form-button';
 @forward '../reservation-form/form-structure';
