--- a/scss/sections/reservation-form/_form-photo.scss
+++ b/scss/sections/reservation-form/_form-photo.scss
@@ -13,17 +13,17 @@
 
     @include custom-min-mq (1249.5) {
         padding-bottom: 5.5rem;
+        justify-content: flex-start;
     }
 }
 
 .reservation__photo img {
     max-width: f.rem(400);
     max-height: f.rem(400);
-    width: 95%;
+    width: 100%;
     height: auto;
     border-radius: 0.375rem;
     padding: 0.25rem;
-    // transform: rotate(-2deg);
 
 @include min-mq(sm) {
         max-width: f.rem(600);
