--- a/scss/sections/reservation-form/_form-structure.scss
+++ b/scss/sections/reservation-form/_form-structure.scss
@@ -7,10 +7,9 @@
     flex-direction: column;
 
     @include min-mq (xl) {
-        // flex-direction: row;
-        // justify-content: space-around;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 1.1fr;
+        gap: 40px;
     }
 }
 
@@ -24,22 +23,15 @@
     @include min-mq (sm) {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-        grid-column-gap: 20px;
-        grid-row-gap: 20px;
+        gap: 20px;
         max-width: f.rem(800);
     }
 
-    @include min-mq (lg) {
+    // between lg and xl, showing 3 columns
+    @include between-mq (lg,xl) {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr) repeat(2, auto);
         max-width: f.rem(1000);
-    }
-
-    @include min-mq (xl) {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-        grid-column-gap: 15px;
-        grid-row-gap: 15px;
     }
 }
 
@@ -50,11 +42,6 @@
         max-width: 100%;
     }
 }
-
-.reservation__form--bottom-part p{
-    margin-bottom: 1rem;
-}
-
 
 // grid of inputs and textarea
 @include min-mq (sm) {
@@ -91,16 +78,8 @@
     }
 }
 
-
-@include min-mq (lg) {
-    .reservation__form--name {
-        grid-area: 1 / 1 / 2 / 2;
-    }
-
-    .reservation__form--phone {
-        grid-area: 1 / 2 / 2 / 3;
-    }
-
+// between lg and xl, showing 3 columns
+@include between-mq (lg,xl) {
     .reservation__form--email {
         grid-area: 1 / 3 / 2 / 4;
     }
@@ -123,39 +102,5 @@
 
     .reservation__form--bottom-part {
         grid-area: 5 / 1 / 6 / 4;
-    }
-}
-
-@include min-mq (xl) {
-    .reservation__form--name {
-        grid-area: 1 / 1 / 2 / 2;
-    }
-
-    .reservation__form--phone {
-        grid-area: 1 / 2 / 2 / 3;
-    }
-
-    .reservation__form--email {
-        grid-area: 2 / 1 / 3 / 2;
-    }
-
-    .reservation__form--guest-number {
-        grid-area: 2 / 2 / 3 / 3;
-    }
-
-    .reservation__form--date {
-        grid-area: 3 / 1 / 4 / 2;
-    }
-
-    .reservation__form--time {
-        grid-area: 3 / 2 / 4 / 3;
-    }
-
-    .reservation__form--message {
-        grid-area: 4 / 1 / 5 / 3;
-    }
-
-    .reservation__form--bottom-part {
-        grid-area: 5 / 1 / 6 / 3;
     }
 }
