--- a/scss/style.css
+++ b/scss/style.css
@@ -849,33 +849,13 @@ body {
   }
 }
 
-section#findus {
-  max-width: 100%;
-  padding-inline: 1rem;
-  margin-inline: auto;
-  padding-block: 1rem;
+#home {
+  padding-top: 4.375rem;
+  position: relative;
 }
-@media all and (min-width: 36em) {
-  section#findus {
-    max-width: 800px;
-    max-width: 50rem;
-    padding-inline: 2rem;
-  }
-}
-@media all and (min-width: 62em) {
-  section#findus {
-    max-width: 1150px;
-    max-width: 71.875rem;
-    padding-inline: 2.5rem;
-    padding-block: 5rem;
-  }
-}
-@media all and (min-width: 78.125em) {
-  section#findus {
-    max-width: 1500px;
-    max-width: 93.75rem;
-    padding-inline: 2rem;
-    padding-block: 2.5rem 3rem;
+@media all and (min-width: 23.46875em) {
+  #home {
+    padding-top: 0;
   }
 }
 
@@ -909,17 +889,73 @@ section:not(:first-of-type) {
   }
 }
 
+section:not(:first-of-type) {
+  max-width: 100%;
+  padding-inline: 1rem;
+  margin-inline: auto;
+  padding-block: 2.5rem;
+}
+@media all and (min-width: 36em) {
+  section:not(:first-of-type) {
+    max-width: 800px;
+    max-width: 50rem;
+    padding-inline: 2rem;
+  }
+}
+@media all and (min-width: 62em) {
+  section:not(:first-of-type) {
+    max-width: 1150px;
+    max-width: 71.875rem;
+    padding-inline: 2.5rem;
+    padding-block: 5rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  section:not(:first-of-type) {
+    max-width: 1500px;
+    max-width: 93.75rem;
+    padding-inline: 2rem;
+    padding-block: 6rem 8.5rem;
+  }
+}
+
+section#findus {
+  max-width: 100%;
+  padding-inline: 1rem;
+  margin-inline: auto;
+  padding-block: 1rem;
+}
+@media all and (min-width: 36em) {
+  section#findus {
+    max-width: 800px;
+    max-width: 50rem;
+    padding-inline: 2rem;
+  }
+}
+@media all and (min-width: 62em) {
+  section#findus {
+    max-width: 1150px;
+    max-width: 71.875rem;
+    padding-inline: 2.5rem;
+    padding-block: 5rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  section#findus {
+    max-width: 1500px;
+    max-width: 93.75rem;
+    padding-inline: 2rem;
+    padding-block: 2.5rem 3rem;
+  }
+}
+
 footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-block: calc(1rem + 2.5vw);
-}
-
-.social-icons i {
-  margin: 0.5rem 0.625rem 1.25rem 0.625rem;
+  padding-block: calc(1rem + 1.5vw);
 }
 
 #home {
@@ -1313,13 +1349,14 @@ footer {
 @media all and (min-width: 78.09375em) {
   .reservation__photo {
     padding-bottom: 5.5rem;
+    justify-content: flex-start;
   }
 }
 
 .reservation__photo img {
   max-width: 25rem;
   max-height: 25rem;
-  width: 95%;
+  width: 100%;
   height: auto;
   border-radius: 0.375rem;
   padding: 0.25rem;
@@ -1329,14 +1366,6 @@ footer {
     max-width: 37.5rem;
     max-height: 25rem;
   }
-}
-
-.reservation__form--button {
-  padding: 10px 15px;
-  border: none;
-  border-radius: 10px;
-  float: right;
-  cursor: pointer;
 }
 
 .input-control {
@@ -1362,6 +1391,18 @@ footer {
   }
 }
 
+.reservation__form--bottom-part p {
+  margin-bottom: 1rem;
+}
+
+.reservation__form--button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  float: right;
+  cursor: pointer;
+}
+
 .reservation {
   display: flex;
   flex-direction: column;
@@ -1369,7 +1410,8 @@ footer {
 @media all and (min-width: 78.125em) {
   .reservation {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1.1fr;
+    gap: 40px;
   }
 }
 
@@ -1384,24 +1426,15 @@ footer {
   .reservation__form {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    gap: 20px;
     max-width: 50rem;
   }
 }
-@media all and (min-width: 62em) {
+@media all and (min-width: 62em) and (max-width: 78.12375em) {
   .reservation__form {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr) repeat(2, auto);
     max-width: 62.5rem;
-  }
-}
-@media all and (min-width: 78.125em) {
-  .reservation__form {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
   }
 }
 
@@ -1412,10 +1445,6 @@ footer {
   .reservation__form > div {
     max-width: 100%;
   }
-}
-
-.reservation__form--bottom-part p {
-  margin-bottom: 1rem;
 }
 
 @media all and (min-width: 36em) {
@@ -1444,13 +1473,7 @@ footer {
     grid-area: 5/1/6/3;
   }
 }
-@media all and (min-width: 62em) {
-  .reservation__form--name {
-    grid-area: 1/1/2/2;
-  }
-  .reservation__form--phone {
-    grid-area: 1/2/2/3;
-  }
+@media all and (min-width: 62em) and (max-width: 78.12375em) {
   .reservation__form--email {
     grid-area: 1/3/2/4;
   }
@@ -1468,32 +1491,6 @@ footer {
   }
   .reservation__form--bottom-part {
     grid-area: 5/1/6/4;
-  }
-}
-@media all and (min-width: 78.125em) {
-  .reservation__form--name {
-    grid-area: 1/1/2/2;
-  }
-  .reservation__form--phone {
-    grid-area: 1/2/2/3;
-  }
-  .reservation__form--email {
-    grid-area: 2/1/3/2;
-  }
-  .reservation__form--guest-number {
-    grid-area: 2/2/3/3;
-  }
-  .reservation__form--date {
-    grid-area: 3/1/4/2;
-  }
-  .reservation__form--time {
-    grid-area: 3/2/4/3;
-  }
-  .reservation__form--message {
-    grid-area: 4/1/5/3;
-  }
-  .reservation__form--bottom-part {
-    grid-area: 5/1/6/3;
   }
 }
 .findus {
@@ -1618,4 +1615,8 @@ footer {
     justify-content: center;
     align-items: start;
   }
+}
+
+.social-icons i {
+  margin: 0.5rem 0.625rem 1.25rem 0.625rem;
 }/*# sourceMappingURL=style.css.map */
