--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -34,16 +34,10 @@ body {
 }
 
 // menu
-#menu h1,
+#menu h1,  
 #reservation h1 {
     font-size: clamp(2.2rem, 2rem + 1vw, 3rem);
     text-shadow: 2px 3px $pink-1;
-    margin-bottom: 1.25rem;
-    text-align: center;
-
-    @include min-mq (xl) {
-        margin-bottom: 3rem;
-    }
 }
 
 // small menu
@@ -53,9 +47,13 @@ body {
 
     //"plus" sign (+) 
     &:after {
-        content: '\002B';
         font-weight: bold;
     }
+}
+
+// "minus" sign (-)
+.small-menu__accordion--active:after {
+    font-weight: bold;
 }
 
 // carousel text
