--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -81,35 +81,37 @@
     margin-inline: auto;
     margin-bottom: 0.7rem;
     padding-bottom: 0.7rem;
-    text-align: left;
-    
+    text-align: left;//see to keep/del
+    text-align: center; //see to keep/del
     @include custom-min-mq (299.5) {
         text-align: center;
     }
 }
 
 .findus__grid {
-
+    text-align: center;//see to keep/del
     @include custom-min-mq (299.5) {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(2, auto);
-        grid-column-gap: 10px;
-        grid-row-gap: 0;
+        column-gap: 10px;
+        row-gap: 0;
         justify-content: center;
         align-items: start;
+        text-align: left;//see to keep/del
     }
 }
 
 .openhour-grid {
-
+    text-align: center;//see to keep/del
     @include custom-min-mq (299.5) {
         display: grid;
         grid-template-rows: repeat(7, 1fr);
         grid-template-columns: repeat(2, auto);
-        grid-column-gap: 10px;
-        grid-row-gap: 0;
+        column-gap: 10px;
+        row-gap: 0;
         justify-content: center;
         align-items: start;
+        text-align: left;//see to keep/del
     }
 }
