--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -81,15 +81,12 @@
     margin-inline: auto;
     margin-bottom: 0.7rem;
     padding-bottom: 0.7rem;
-    text-align: left;//see to keep/del
-    text-align: center; //see to keep/del
-    @include custom-min-mq (299.5) {
-        text-align: center;
-    }
+    text-align: center;
 }
 
 .findus__grid {
-    text-align: center;//see to keep/del
+    text-align: center;
+
     @include custom-min-mq (299.5) {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
@@ -98,12 +95,25 @@
         row-gap: 0;
         justify-content: center;
         align-items: start;
-        text-align: left;//see to keep/del
+        text-align: left;
     }
 }
 
-.openhour-grid {
-    text-align: center;//see to keep/del
+.openhour-grid--small {
+    text-align: center;
+
+    @include custom-min-mq (299.5) {
+        display: none;
+    }
+}
+
+.openhour-grid--small li:nth-of-type(even) {
+    margin-bottom: 0.4rem;
+}
+
+.openhour-grid--large {
+    display: none;
+
     @include custom-min-mq (299.5) {
         display: grid;
         grid-template-rows: repeat(7, 1fr);
@@ -112,6 +122,6 @@
         row-gap: 0;
         justify-content: center;
         align-items: start;
-        text-align: left;//see to keep/del
+        text-align: left;
     }
 }
