--- a/scss/style.css
+++ b/scss/style.css
@@ -1600,13 +1600,7 @@ footer {
   margin-inline: auto;
   margin-bottom: 0.7rem;
   padding-bottom: 0.7rem;
-  text-align: left;
   text-align: center;
-}
-@media all and (min-width: 18.71875em) {
-  .findus h3 {
-    text-align: center;
-  }
 }
 
 .findus__grid {
@@ -1626,11 +1620,24 @@ footer {
   }
 }
 
-.openhour-grid {
+.openhour-grid--small {
   text-align: center;
 }
 @media all and (min-width: 18.71875em) {
-  .openhour-grid {
+  .openhour-grid--small {
+    display: none;
+  }
+}
+
+.openhour-grid--small li:nth-of-type(even) {
+  margin-bottom: 0.4rem;
+}
+
+.openhour-grid--large {
+  display: none;
+}
+@media all and (min-width: 18.71875em) {
+  .openhour-grid--large {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(2, auto);
