--- a/r2place.css
+++ b/r2place.css
@@ -433,8 +433,8 @@ section#home img {
     display: grid;
     grid-template-columns: 1fr 50px;
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 2px;
-    grid-row-gap: 0px;
+    column-gap: 2px;
+    row-gap: 0px;
 
     border: 1px solid var(--orange-1);
     border-top: 0;
@@ -670,8 +670,8 @@ section#home img {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    column-gap: 0px;
+    row-gap: 0px;
 }
 
 .large-menu__item {
@@ -757,8 +757,8 @@ section#home img {
         display: grid;
         grid-template-columns: 7fr 5fr;
         grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
+        column-gap: 0px;
+        row-gap: 0px;
     }
 
     .large-menu__item {
@@ -855,7 +855,7 @@ section#home img {
 .reservation__form {
     display: grid;
     grid-template-rows: repeat(6, 1fr);
-    grid-row-gap: 0.625rem;
+    row-gap: 0.625rem;
     max-width: 400px;
     margin-inline: auto;
 } */
@@ -959,8 +959,8 @@ textarea:focus {
     .reservation__form {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 20px;
-        grid-row-gap: 20px;
+        column-gap: 20px;
+        row-gap: 20px;
         max-width: 800px;
         margin-inline: auto;
     }
@@ -1013,8 +1013,8 @@ textarea:focus {
     .reservation__form {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 20px;
-        grid-row-gap: 20px;
+        column-gap: 20px;
+        row-gap: 20px;
         max-width: 1000px;
         margin-inline: auto;
     }
@@ -1073,8 +1073,8 @@ textarea:focus {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr) 2fr 1.5fr;
-        grid-column-gap: 10px;
-        grid-row-gap: 10px;
+        column-gap: 10px;
+        row-gap: 10px;
     }
 
     .reservation__form--name {
