--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -88,7 +88,7 @@
         align-items: center;
         margin: 0;
         padding: 0;
-        min-height: 75px;
+        min-height: f.rem(75);
     }
 }
 
