--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -91,7 +91,7 @@
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(2, auto);
-        column-gap: 10px;
+        column-gap: f.rem(10);
         row-gap: 0;
         justify-content: center;
         align-items: start;
@@ -118,7 +118,7 @@
         display: grid;
         grid-template-rows: repeat(7, 1fr);
         grid-template-columns: repeat(2, auto);
-        column-gap: 10px;
+        column-gap: f.rem(10);
         row-gap: 0;
         justify-content: center;
         align-items: start;
