--- a/scss/sections/menus/_lg-menu-contents.scss
+++ b/scss/sections/menus/_lg-menu-contents.scss
@@ -6,8 +6,8 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    column-gap: 0px;
+    row-gap: 0px;
     border-top: 0px;
 }
 
@@ -53,8 +53,8 @@
         display: grid;
         grid-template-columns: 7fr 5fr;
         grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
+        column-gap: 0px;
+        row-gap: 0px;
     }
 
     .large-menu__item--1 {
