--- a/scss/sections/menus/_sm-menu-carousel.scss
+++ b/scss/sections/menus/_sm-menu-carousel.scss
@@ -5,7 +5,7 @@
 .small-menu__slideshow-container {
     position: relative;
     margin: auto;
-    margin-top: 25px;
+    margin-top: f.rem(25);
     max-width: f.rem(350);
 }
 
@@ -25,7 +25,7 @@
 // carousel text
 .small-menu__image-description {
     margin-inline: auto;
-    padding: 8px 12px;
+    padding: f.rem(6) f.rem(12);
     width: 85%;
     max-width: f.rem(350);
     text-align: center;
