--- a/scss/sections/reservation-form/_form-button.scss
+++ b/scss/sections/reservation-form/_form-button.scss
@@ -1,5 +1,5 @@
 .reservation__form--button {
-    padding: 10px 15px;
+    padding: 0.625rem 1rem;
     border: none;
     border-radius: 10px;
     float: right;
