--- a/scss/style.css
+++ b/scss/style.css
@@ -352,18 +352,6 @@ hr {
   opacity: 0.25;
 }
 
-.float-left {
-  float: left;
-}
-
-.float-right {
-  float: right;
-}
-
-.float-none {
-  float: none;
-}
-
 .clearfix::after {
   content: "";
   clear: both;
@@ -802,7 +790,7 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
-    min-height: 75px;
+    min-height: 4.6875rem;
   }
 }
 
@@ -862,14 +850,12 @@ section:not(:first-of-type) {
 }
 @media all and (min-width: 36em) {
   section:not(:first-of-type) {
-    max-width: 800px;
     max-width: 50rem;
     padding-inline: 2rem;
   }
 }
 @media all and (min-width: 62em) {
   section:not(:first-of-type) {
-    max-width: 1150px;
     max-width: 71.875rem;
     padding-inline: 2.5rem;
     padding-block: 5rem;
@@ -877,7 +863,6 @@ section:not(:first-of-type) {
 }
 @media all and (min-width: 78.125em) {
   section:not(:first-of-type) {
-    max-width: 1500px;
     max-width: 93.75rem;
     padding-inline: 2rem;
     padding-block: 6rem 8.5rem;
@@ -892,14 +877,12 @@ section:not(:first-of-type) {
 }
 @media all and (min-width: 36em) {
   section:not(:first-of-type) {
-    max-width: 800px;
     max-width: 50rem;
     padding-inline: 2rem;
   }
 }
 @media all and (min-width: 62em) {
   section:not(:first-of-type) {
-    max-width: 1150px;
     max-width: 71.875rem;
     padding-inline: 2.5rem;
     padding-block: 5rem;
@@ -907,7 +890,6 @@ section:not(:first-of-type) {
 }
 @media all and (min-width: 78.125em) {
   section:not(:first-of-type) {
-    max-width: 1500px;
     max-width: 93.75rem;
     padding-inline: 2rem;
     padding-block: 6rem 8.5rem;
@@ -922,14 +904,12 @@ section#findus {
 }
 @media all and (min-width: 36em) {
   section#findus {
-    max-width: 800px;
     max-width: 50rem;
     padding-inline: 2rem;
   }
 }
 @media all and (min-width: 62em) {
   section#findus {
-    max-width: 1150px;
     max-width: 71.875rem;
     padding-inline: 2.5rem;
     padding-block: 5rem;
@@ -937,7 +917,6 @@ section#findus {
 }
 @media all and (min-width: 78.125em) {
   section#findus {
-    max-width: 1500px;
     max-width: 93.75rem;
     padding-inline: 2rem;
     padding-block: 2.5rem 3rem;
@@ -995,116 +974,69 @@ footer {
   }
 }
 
-.large-menu__tabs {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+.small-menu__carousel {
+  display: block;
+}
+@media all and (min-width: 43.71875em) {
+  .small-menu__carousel {
+    display: none;
+  }
 }
 
-.large-menu__tab {
-  flex: 1 0 33.33%;
-  padding: 1rem;
-  transition: 0.5s;
-  position: relative;
-  text-align: center;
-}
-.large-menu__tab--active {
-  transition: 0.5s;
-}
-
-.large-menu__tab-link::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  content: "";
-}
-
-/* menu content */
-.large-food-menu {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  border-top: 0px;
-}
-
-/* menu description */
-.large-food-menu h3 {
-  padding: 2%;
-  padding-left: calc(0.5rem + 1vw);
-  display: inline-block;
-}
-
-.large-menu__item {
-  display: grid;
-  align-content: center;
-}
-
-.large-menu__item p {
-  margin: 0;
-  padding: 2%;
-  padding-left: calc(0.5rem + 1vw);
-}
-
-.large-menu__item-price {
-  display: inline-block;
-  border-radius: 10px;
-  width: 4.6875rem;
-  height: 2.5rem;
-  padding-block: 1rem;
-  margin-left: 0.5rem;
-  text-align: center;
-}
-
-/* menu photos */
-.large-menu__image > * {
+.large-menu {
   display: none;
 }
 
-.large-menu__image-description {
-  margin-top: 0.65rem;
-}
-
-@media all and (min-width: 43.71875em) {
-  .large-food-menu {
-    display: grid;
-    grid-template-columns: 7fr 5fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+@media all and (min-width: 25em) {
+  /* hide the small menu, show the large menu */
+  .large-menu__item:nth-of-type(3) {
+    border-bottom: 0;
   }
-  .large-menu__item--1 {
-    grid-area: 1/1/2/2;
+  .small-menu {
+    display: none;
   }
-  .large-menu__item--2 {
-    grid-area: 2/1/3/2;
-  }
-  .large-menu__item--3 {
-    grid-area: 3/1/4/2;
-  }
-  .large-menu__image {
-    grid-area: 1/2/4/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1.25rem;
-  }
-  .large-menu__image img {
-    max-width: 100%;
-  }
-  .large-menu__image > * {
+  .large-menu {
     display: block;
   }
-}
-@media all and (min-width: 61.96875em) {
+  /* rounded border menu on wider screen */
+  .large-menu__tab {
+    border-radius: 25px 25px 0 0;
+  }
   .large-food-menu {
-    grid-template-columns: 2fr 1fr;
+    border-radius: 0 0 15px 15px;
   }
 }
+.large-menu {
+  max-width: 28.125rem;
+  margin-inline: auto;
+}
+@media all and (min-width: 36em) {
+  .large-menu {
+    max-width: 50rem;
+  }
+}
+@media all and (min-width: 62em) {
+  .large-menu {
+    max-width: 62.5rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  .large-menu {
+    max-width: 81.25rem;
+    padding-inline: 2rem;
+  }
+}
+
+#menu h1 {
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+@media all and (min-width: 78.125em) {
+  #menu h1 {
+    margin-bottom: 3rem;
+  }
+}
+
 .small-menu__accordion {
   padding: 0.8rem;
   width: 100%;
@@ -1117,7 +1049,6 @@ footer {
 .small-menu__accordion:after {
   content: "+";
   float: right;
-  margin-left: 5px;
 }
 
 .small-menu__accordion:not(:first-of-type) {
@@ -1141,8 +1072,9 @@ footer {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(3, auto);
-  grid-column-gap: 5px;
-  grid-row-gap: 0px;
+  -moz-column-gap: 0.3125rem;
+       column-gap: 0.3125rem;
+  row-gap: 0px;
   padding-block: 0.5rem;
 }
 
@@ -1180,7 +1112,7 @@ footer {
 .small-menu__slideshow-container {
   position: relative;
   margin: auto;
-  margin-top: 25px;
+  margin-top: 1.5625rem;
   max-width: 21.875rem;
 }
 
@@ -1199,7 +1131,7 @@ footer {
 
 .small-menu__image-description {
   margin-inline: auto;
-  padding: 8px 12px;
+  padding: 0.375rem 0.75rem;
   width: 85%;
   max-width: 21.875rem;
   text-align: center;
@@ -1277,79 +1209,118 @@ footer {
     opacity: 1;
   }
 }
-.small-menu__carousel {
-  display: block;
-}
-@media all and (min-width: 43.71875em) {
-  .small-menu__carousel {
-    display: none;
-  }
+.large-menu__tabs {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
-.large-menu {
+.large-menu__tab {
+  flex: 1 0 33.33%;
+  padding: 1rem;
+  transition: 0.5s;
+  position: relative;
+  text-align: center;
+}
+.large-menu__tab--active {
+  transition: 0.5s;
+}
+
+.large-menu__tab-link::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: "";
+}
+
+/* menu content */
+.large-food-menu {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  -moz-column-gap: 0px;
+       column-gap: 0px;
+  row-gap: 0px;
+  border-top: 0px;
+}
+
+/* menu description */
+.large-food-menu h3 {
+  padding: 2%;
+  padding-left: calc(0.5rem + 1vw);
+  display: inline-block;
+}
+
+.large-menu__item {
+  display: grid;
+  align-content: center;
+}
+
+.large-menu__item p {
+  margin: 0;
+  padding: 2%;
+  padding-left: calc(0.5rem + 1vw);
+}
+
+.large-menu__item-price {
+  display: inline-block;
+  border-radius: 10px;
+  width: 4.6875rem;
+  height: 2.5rem;
+  padding-block: 1rem;
+  margin-left: 0.5rem;
+  text-align: center;
+}
+
+/* menu photos */
+.large-menu__image > * {
   display: none;
 }
 
-@media all and (min-width: 25em) {
-  /* hide the small menu, show the large menu */
-  .large-menu__item:nth-of-type(3) {
-    border-bottom: 0;
+.large-menu__image-description {
+  margin-top: 0.65rem;
+}
+
+@media all and (min-width: 43.71875em) {
+  .large-food-menu {
+    display: grid;
+    grid-template-columns: 7fr 5fr;
+    grid-template-rows: repeat(3, 1fr);
+    -moz-column-gap: 0px;
+         column-gap: 0px;
+    row-gap: 0px;
   }
-  .small-menu {
-    display: none;
+  .large-menu__item--1 {
+    grid-area: 1/1/2/2;
   }
-  .large-menu {
+  .large-menu__item--2 {
+    grid-area: 2/1/3/2;
+  }
+  .large-menu__item--3 {
+    grid-area: 3/1/4/2;
+  }
+  .large-menu__image {
+    grid-area: 1/2/4/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1.25rem;
+  }
+  .large-menu__image img {
+    max-width: 100%;
+  }
+  .large-menu__image > * {
     display: block;
   }
-  /* rounded border menu on wider screen */
-  .large-menu__tab {
-    border-radius: 25px 25px 0 0;
-  }
+}
+@media all and (min-width: 61.96875em) {
   .large-food-menu {
-    border-radius: 0 0 15px 15px;
+    grid-template-columns: 2fr 1fr;
   }
 }
-.large-menu {
-  max-width: 28.125rem;
-  margin-inline: auto;
-}
-@media all and (min-width: 36em) {
-  .large-menu {
-    max-width: 50rem;
-  }
-}
-@media all and (min-width: 62em) {
-  .large-menu {
-    max-width: 62.5rem;
-  }
-}
-@media all and (min-width: 78.125em) {
-  .large-menu {
-    max-width: 81.25rem;
-    padding-inline: 2rem;
-  }
-}
-
-#menu h1 {
-  margin-bottom: 1.25rem;
-  text-align: center;
-}
-@media all and (min-width: 78.125em) {
-  #menu h1 {
-    margin-bottom: 3rem;
-  }
-}
-
-#reservation h1 {
-  margin-bottom: 1.25rem;
-  text-align: center;
-}
-@media all and (min-width: 78.125em) {
-  #reservation h1 {
-    margin-bottom: 3rem;
-  }
-}
-
 .reservation {
   display: flex;
   flex-direction: column;
@@ -1358,14 +1329,14 @@ footer {
   .reservation {
     display: grid;
     grid-template-columns: 1fr 1.1fr;
-    gap: 40px;
+    gap: 2.5rem;
   }
 }
 
 .reservation__form {
   display: grid;
   grid-template-rows: repeat(6, 1fr) repeat(2, auto);
-  grid-row-gap: 0.625rem;
+  row-gap: 0.625rem;
   max-width: 25rem;
   margin-inline: auto;
 }
@@ -1373,7 +1344,7 @@ footer {
   .reservation__form {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr) repeat(2, auto);
-    gap: 20px;
+    gap: 1.25rem;
     max-width: 50rem;
   }
 }
@@ -1440,6 +1411,16 @@ footer {
     grid-area: 5/1/6/4;
   }
 }
+#reservation h1 {
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+@media all and (min-width: 78.125em) {
+  #reservation h1 {
+    margin-bottom: 3rem;
+  }
+}
+
 .reservation__photo {
   display: none;
 }
@@ -1501,7 +1482,7 @@ footer {
 }
 
 .reservation__form--button {
-  padding: 10px 15px;
+  padding: 0.625rem 1rem;
   border: none;
   border-radius: 10px;
   float: right;
@@ -1611,8 +1592,8 @@ footer {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, auto);
-    -moz-column-gap: 10px;
-         column-gap: 10px;
+    -moz-column-gap: 0.625rem;
+         column-gap: 0.625rem;
     row-gap: 0;
     justify-content: center;
     align-items: start;
@@ -1641,8 +1622,8 @@ footer {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(2, auto);
-    -moz-column-gap: 10px;
-         column-gap: 10px;
+    -moz-column-gap: 0.625rem;
+         column-gap: 0.625rem;
     row-gap: 0;
     justify-content: center;
     align-items: start;
